@@ -1,5 +1,5 @@
 <html>
-<!-- RCSid $Id: ray.html,v 1.24 2017/08/26 16:07:22 greg Exp $ -->
+<!-- RCSid $Id: ray.html,v 1.25 2018/06/25 20:49:10 greg Exp $ -->
 <head>
 <title>
 The RADIANCE 5.2 Synthetic Imaging System
@@ -1151,6 +1151,37 @@ unless the line integrals consider enclosed geometry.
 	the surface will be invisible from behind.  Unlike other
 	data-driven material types, the BSDF type is fully supported
 	and all parts of the distribution are properly sampled.
+<p>
+
+<dt>
+	<a NAME="sBSDF">
+	<b>sBSDF</b>
+	</a>
+
+<dd>
+	The sBSDF material is identical to the BSDF type with two
+	important differences.  First, proxy geometry is not
+	supported, so there is no thickness parameter.  Second, an
+	sBSDF is assumed to have some specular through component,
+	which is treated specially during the direct calculation
+	and when viewing the material.  Based on the BSDF data, the
+	coefficient of specular transmission is determined and used
+	for modifying unscattered shadow and view rays.
+
+<pre>
+	mod sBSDF id
+	5+ BSDFfile ux uy uz funcfile transform
+	0
+	0|3|6|9
+	     rfdif gfdif bfdif
+	     rbdif gbdif bbdif
+	     rtdif gtdif btdif
+</pre>
+
+<p>
+	If a material has no specular transmitted component, it is
+	much better to use the BSDF type with a zero thickness
+	than to use sBSDF.
 <p>
 
 <dt>
